fixup: use Set.of in ClassicGroupTest